# pyrobot-vision

./: .gitmodules  README.md
examples/: evaluate_ablation_study.py  evaluate_rbot_dataset.py  multi_obj_tracking_example.py  rbot_dataset_handle.py  rbot_two_models_tracking.yaml
pyrbgt/: requirements.txt  setup.py
pyrbgt/src/pyrbgt/: __init__.py  evaluator.py  image_handle.py  rbgt_tracker.py  tracker.py
rbgt_pybind/: CMakeLists.txt  setup.py
rbgt_pybind/src/: CMakeLists.txt  image_loader_camera.cpp  image_loader_camera.h  run_on_recorded_sequence.cpp  tracker.cpp  tracker.h
